tests/tsc-references/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints2/input.ts/es2015.1.normal/output.js
class C {
    constructor(x){
    }
}
var c = new C(1);
var c = new C(new C('')); // error
